He añadido la pagina donde se muestran los profesores del grupo piensa

--- a/teachers.html
+++ b/teachers.html
@@ -1,69 +1,221 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/overview.css">
-    <title>Profesores Piensa</title>
-  </head>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+  <title>Docentes - Grupo Piensa</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/fonts.css">
+  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+  <link rel="stylesheet" type="text/css" href="styles/structure.css">
+  <link rel="stylesheet" type="text/css" href="styles/cards.css">
+  <script src="https://kit.fontawesome.com/5e1720d8b8.js" crossorigin="anonymous"></script>
+</head>
 <body>
-    <div class="wrapper">
-        <div class="tabladeopciones">
-            <!-- Contenido del lado izquierdo (opciones) -->
-            <div class="imagenes">
-                <img src="./download.png">
-            </div>
-            <div class="opciones">
-                <ul>
-                    <li><a href="./teachers.html">Profesores</a></li>
-                    <li><a href="./courses.html">Cursos</a></li>
-                    <li><a href="./themes.html">Temas</a></li>
+
+    <main class="site-wrap">
+
+        <div class="fixed-up">
+
+            <header class="animate-scroll up-header initial-header" role="banner">
+
+                <div class="site-logo">
+                    <a href="index.html">
+                        <img src="img/download.png" alt="Logo piensa" class="img-show">
+                    </a>
+                </div>
+                <div class="social-wrap">
+                    <a href="https://www.facebook.com/grupopiensaaqp/" target="_blank" class="reference animate-scroll"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.tiktok.com/@tiopiensa" target="_blank" class="reference animate-scroll"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="login.html" class="reference animate-scroll" target="_self">Acceder</a>
+                </div>
+
+            </header>
+
+            <nav class="animate-scroll" role="navigation">
+                <ul class="nav-bar animate-scroll">
+                    <li class="nav-li">
+                        <a href="index.html" target="_self" class="nav-link"><b>Inicio</b></a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="teachers.html" target="_self" class="nav-link"><b>Docentes</b></a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="courses.html" target="_self" class="nav-link"><b>Cursos</b></a>
+                    </li>
+                    <!--li> Experimental
+                        <a href="contact.html"><b>Contacto</b></a>
+                        </li-->
                 </ul>
-            </div>
+            </nav>
         </div>
-        <div class="informacion">
-            <!-- Contenido del lado derecho (información) -->
-            <div class="profesores">
-                <div class="profesor">
-                    <pre>
-                        profesor1
-                        --
-                        ----
-                        -----
-                        -----
-                        -----
-                        -----
-                        ------
-                        ------
-                    </pre>
+
+        <!--picture class="initial-image">
+            <source srcset="img/image6.png" media="(max-width: 700px) and (min-height: 600px)">
+                <source srcset="img/image5.png" media="(max-width: 700px)">
+                    <img src="img/image4.png">
+        </picture-->
+
+        <section class="courses-information">
+            <header>
+                <h2><span>Todos los cursos que necesitas</span></h2>
+            </header>
+        </section>
+
+        <section class="container-cards">
+
+            <article id="calculo-1" class="card card1">
+                <div class="card-content">
+                    <div class="title-card">
+                        <h3>Imagen aquí</h3>
+                        <h2>Froilan Salcedo</h2>
+                    </div>
+                    <div class="info-card">
+                        <div>
+                            <h3>Experiencia</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Cursos que enseña</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="profesor">
-                    <pre>
-                        profesor2
-                        --
-                        ----
-                        -----
-                        -----
-                        -----
-                        -----
-                        ------
-                        ------
-                    </pre>
+
+            </article>
+
+            <article class="card card2">
+                <div class="card-content">
+                    <div class="title-card">
+                        <h3>Imagen aquí</h3>
+                        <h2>Froilan Salcedo</h2>
+                    </div>
+                    <div class="info-card">
+                        <div>
+                            <h3>Experiencia</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Cursos que enseña</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="profesor">
-                    <pre>
-                        profesor3
-                        --
-                        ----
-                        -----
-                        -----
-                        -----
-                        -----
-                        ------
-                        ------
-                    </pre>
+            </article>
+
+            <article class="card card3">
+                <div class="card-content">
+                    <div class="title-card">
+                        <h3>Imagen aquí</h3>
+                        <h2>Froilan Salcedo</h2>
+                    </div>
+                    <div class="info-card">
+                        <div>
+                            <h3>Experiencia</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Cursos que enseña</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
+            </article>
+
+            <article class="card card4">
+                <div class="card-content">
+                    <div class="title-card">
+                        <h3>Imagen aquí</h3>
+                        <h2>Froilan Salcedo</h2>
+                    </div>
+                    <div class="info-card">
+                        <div>
+                            <h3>Experiencia</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Cursos que enseña</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+
+        <footer>
+            <article class="footer-phrase">
+                <h4>Sigue cualquiera de estos enlaces para mayor información.</h4>  
+            </article>
+            <article class="footer-ubication">
+                <h5 class="footer-heading">Ubicación</h5>
+                <ul class="footer-list">
+                    <li id="academia"><a href="#academia">Academia</a></li>
+                    <li id="noticias"><a href="#noticias">Noticias</a></li>
+                    <li id="embajadores"><a href="#embajadores">Nuestros embajadores</a></li>
+                </ul>
+            </article>
+            <article class="footer-links"> 
+                <h5 class="footer-heading">Enlaces</h5>
+                <ul class="footer-list">
+                    <li id="cursos"><a href="#cursos">Cursos</a></li>
+                    <li id="profesores"><a href="#profesores">Profesores</a></li>
+                </ul>
+            </article>
+            <article class="footer-get-in-touch">
+                <h5 class="footer-heading">Contacto</h5>
+                <ul class="footer-list">
+                    <li id="ayuda"><a href="#ayuda">Centro de Ayuda</a></li>
+                    <li id="soporte"><a href="#soporte">Soporte a la comunidad</a></li>
+                    <li id="sponsors"><a href="#sponsors">Nuestros Sponsors</a></li>
+                </ul>
+            </article>
+
+        </footer>
+
+    </main>
+
 </body>
 </html>
+
