--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Grupo Piensa</title>
+  <title>Cursos - Grupo Piensa</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
