Aula Virtual funcional

--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -19,11 +19,11 @@
             <li><a onclick="">HOME <br> ➞</a></li>
             <li><a onclick="getTeachers()">PROFESORES <br> ➞</a></li>
             <li><a onclick="getCursos()">CURSOS <br> ➞</a></li>
-            <li><a onclick="getRegister()">INFORMACION PERSONAL <br> ➞</a></li>
+            <li><a onclick="getInformation()">INFORMACION PERSONAL <br> ➞</a></li>
           </ul>
         </div>
       </div>
-      <div class="informacion" id="courses">
+      <div class="informacion" id="data">
         <!-- Contenido del lado derecho (información) -->
         <div class="cursos", >
           <article class="curso">
