Se pudo hacer el script para ver los profesores

--- a/courses.html
+++ b/courses.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="styles/structure.css">
   <link rel="stylesheet" type="text/css" href="styles/coursesstyle.css">
   <script src="https://kit.fontawesome.com/5e1720d8b8.js" crossorigin="anonymous"></script>
+  <script src="js/obtenerCursos.js"></script>
 </head>
 <body>
 
@@ -63,7 +64,7 @@
             </header>
         </section>
 
-        <section class="container-cards">
+        <section class="container-cards" id="contenedor-tarjetas">
 
             <article id="calculo-1" class="card card1">
                 <div class="card-content">
@@ -75,7 +76,7 @@
                         <div>
                             <h3>Turnos</h3>
                             <div class="info">
-                                <h4>Información, usar fetch</h4>
+                                <h4>aalafdj salf lasjf alñjf añl alñksfd a alñsdfj aasfd, usar fetch</h4>
                                 <h4>Información, usar fetch</h4>
                                 <h4>Información, usar fetch</h4>
                                 <h4>Información, usar fetch</h4>
@@ -152,6 +153,10 @@
                         <div>
                             <h3>Turnos</h3>
                             <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
                                 <h4>Información, usar fetch</h4>
                                 <h4>Información, usar fetch</h4>
                                 <h4>Información, usar fetch</h4>
