--- a/teachers.html
+++ b/teachers.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="styles/structure.css">
   <link rel="stylesheet" type="text/css" href="styles/cards.css">
   <script src="https://kit.fontawesome.com/5e1720d8b8.js" crossorigin="anonymous"></script>
+  <script src="./js/obtenerDocentes.js" ></script>
 </head>
 <body>
 
@@ -63,7 +64,7 @@
             </header>
         </section>
 
-        <section class="container-cards">
+        <section class="container-cards" id="tarjetas-docentes">
 
             <article id="calculo-1" class="card card1">
                 <div class="card-content">
