--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -17,7 +17,7 @@
         <!-- Contenido del lado izquierdo (opciones) -->
           <ul>
             <li>
-              <a onclick="">
+              <a>
                 <h2><i class="fa-solid fa-house"></i></h2>
                 <h5>HOME</h5>
               </a>
@@ -35,7 +35,7 @@
               </a>
             </li>
             <li>
-              <a onclick="getRegister()">
+              <a onclick="getInformation()">
                 <h2><i class="fa-solid fa-user"></i></h2>
                 <h5>MIS DATOS</h5>
               </a>
