Modificando estilos para el aula virtual

--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -48,7 +48,9 @@
         <!--obtener primer nombre del alumno-->
         <h2>Hola Jorge!</h2>
         <div class="header-logo">
-          <img src="img/download.png">
+          <a href="index.html">
+            <img src="img/download.png">
+          </a>
         </div>
       </header>
 
