Actualizando el nombre y el item

--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -44,9 +44,9 @@
       </aside>
 
       <header>
-        <h1>Cursos</h1>
+        <h1 id="item">Home</h1>
         <!--obtener primer nombre del alumno-->
-        <h2>Hola Jorge!</h2>
+        <h2 id="user">Hola Jorge!</h2>
         <div class="header-logo">
           <img src="img/download.png">
         </div>
