--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -46,7 +46,7 @@
       <header>
         <h1 id="item">Home</h1>
         <!--obtener primer nombre del alumno-->
-        <h2 id="user">Hola Jorge!</h2>
+        <h2 id="user"></h2>
         <div class="header-logo">
           <a href="index.html">
             <img src="img/download.png">
