--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       </header>
       <article class="teachers-cards">
         <div class="item-teacher">
-          <a class="link-teacher">
+          <a class="link-teacher" href="teachers.html">
             <div>
               <img src="img/image7.png">
             </div>
@@ -260,7 +260,7 @@
           </a>
         </div>
         <div class="item-teacher">
-          <a class="link-teacher">
+          <a class="link-teacher" href="teachers.html">
             <div>
               <img src="img/image7.png">
             </div>
@@ -279,7 +279,7 @@
           </a>
         </div>
         <div class="item-teacher">
-          <a class="link-teacher">
+          <a class="link-teacher" href="teachers.html">
             <div>
               <img src="img/image7.png">
             </div>
@@ -325,7 +325,7 @@
         <h5 class="footer-heading">Contacto</h5>
         <ul class="footer-list">
           <li id="ayuda"><a href="#ayuda">Centro de Ayuda</a></li>
-          <li id="soporte"><a href="#soporte">Soporte a la comunidad</a></li>
+          <li id="soporte"><a href="#soporte">Soporte</a></li>
           <li id="sponsors"><a href="#sponsors">Nuestros Sponsors</a></li>
         </ul>
       </article>
