--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -17,7 +17,7 @@
         <!-- Contenido del lado izquierdo (opciones) -->
           <ul>
             <li>
-              <a>
+              <a onclick="getHome()">
                 <h2><i class="fa-solid fa-house"></i></h2>
                 <h5>HOME</h5>
               </a>
@@ -55,6 +55,7 @@
       </header>
 
       <main>
+        <h1>Explora tus cursos y docentes!</h1>
       </main>
     </div>
   </body>
